# mre-optimize-dependencies-only

./: Cargo.toml  README.md
physics_shim/: Cargo.toml
physics_shim/src/: lib.rs
src/: main.rs
