[package]
name = "physics_shim"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra        = { version = "0.18", features = [ "sparse" ] }
nalgebra-glm    = "0.4"
nphysics2d      = "0.11"
ncollide2d      = "0.19"
